--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "echarts": "^6.0.0",
+    "ol": "^10.7.0",
+    "ol-mapbox-style": "^13.1.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
   },
